# drf-api

./: README.md  README>md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  requirments.txt
BLog_API/: asgi.py  settings.py  urls.py  wsgi.py
Blog_App/: admin.py  models.py  serializers.py  urls.py  views.py
Blog_App/migrations/: 0001_initial.py
