[tool.poetry]
name = "drf-api"
version = "0.1.0"
description = ""
authors = ["Yousef Obeidat <y.linux96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
djangorestframework = "^3.12.4"
Tree = "^0.2.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
